Javadoc and the script that makes the .Jar file